Homepage.xml Update

--- a/mlkit/app/src/main/res/layout/home_page.xml
+++ b/mlkit/app/src/main/res/layout/home_page.xml
@@ -5,7 +5,6 @@
     android:id="@+id/relativeLayout4"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:clipToPadding="false"
     tools:context="com.google.firebase.samples.apps.mlkit.MainActivity">
 
     <androidx.viewpager.widget.ViewPager
@@ -19,7 +18,7 @@
     <ImageView
         android:id="@+id/home_background"
         android:layout_width="370dp"
-        android:layout_height="250dp"
+        android:layout_height="240dp"
         android:layout_centerVertical="true"
         android:layout_marginTop="7dp"
         android:src="@drawable/ic_top"
@@ -29,7 +28,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.029999971" />
 
     <!--logo top left-->
     <ImageView
@@ -92,16 +91,14 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/home_search"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <!-- search text to type-->
     <EditText
         android:id="@+id/home_search"
         android:layout_width="350dp"
         android:layout_height="68dp"
-        android:layout_marginTop="220dp"
+        android:layout_marginTop="200dp"
         android:background="@drawable/ic_search_rectangle"
         android:elevation="100dp"
         android:fontFamily="@font/roboto_regular"
@@ -115,7 +112,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/home_background" />
 
-    <!--What'sin your fridge?-->
+    <!--What's in your fridge?-->
     <TextView
         android:id="@+id/home_text_fridge"
         android:layout_width="wrap_content"
@@ -197,7 +194,7 @@
         app:layout_constraintStart_toEndOf="@+id/home_springonion"
         app:layout_constraintTop_toTopOf="@+id/home_springonion" />
 
-    <!--UNDONE What's for lunch?-->
+    <!--What's for lunch?-->
     <TextView
         android:id="@+id/home_text_lunch"
         android:layout_width="wrap_content"
@@ -211,7 +208,7 @@
         app:layout_constraintStart_toStartOf="@+id/home_text_fridge"
         app:layout_constraintTop_toBottomOf="@+id/home_text_fridge" />
 
-    <!--UNDONE See all Button 2-->
+    <!--See all Button 2-->
     <Button
         android:id="@+id/home_see_all_2_button"
         android:layout_width="100dp"
@@ -229,24 +226,25 @@
     <!--recipe box 1-->
     <View
         android:id="@+id/home_recipe_box_1"
-        android:layout_width="140dp"
-        android:layout_height="217dp"
-        android:layout_marginStart="8dp"
+        android:layout_width="116dp"
+        android:layout_height="185dp"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="20dp"
-        android:background="@drawable/ic_recipe_box"
+        android:background="@drawable/ic_recipe_box_new"
+        android:scrollbarAlwaysDrawHorizontalTrack="false"
         app:layout_constraintBottom_toBottomOf="@id/bottom_base"
-        app:layout_constraintStart_toStartOf="@+id/home_background"
+        app:layout_constraintStart_toStartOf="@+id/home_text_lunch"
         app:layout_constraintTop_toBottomOf="@id/home_text_lunch"
         app:layout_constraintVertical_bias="0.0" />
 
     <!--recipe box 2-->
     <View
         android:id="@+id/home_recipe_box_2"
-        android:layout_width="140dp"
-        android:layout_height="217dp"
+        android:layout_width="116dp"
+        android:layout_height="185dp"
+        android:layout_marginStart="20dp"
         android:layout_marginBottom="20dp"
-        android:background="@drawable/ic_recipe_box"
+        android:background="@drawable/ic_recipe_box_new"
         android:scrollbarAlwaysDrawHorizontalTrack="false"
         app:layout_constraintBottom_toBottomOf="@+id/home_recipe_box_1"
         app:layout_constraintStart_toEndOf="@+id/home_recipe_box_1"
@@ -256,13 +254,13 @@
     <!--recipe box 3-->
     <View
         android:id="@+id/home_recipe_box_3"
-        android:layout_width="140dp"
-        android:layout_height="217dp"
+        android:layout_width="116dp"
+        android:layout_height="185dp"
+        android:layout_marginStart="20dp"
         android:layout_marginBottom="20dp"
-        android:background="@drawable/ic_recipe_box"
+        android:background="@drawable/ic_recipe_box_new"
         android:scrollbarAlwaysDrawHorizontalTrack="false"
         app:layout_constraintBottom_toBottomOf="@+id/home_recipe_box_2"
-        app:layout_constraintLeft_toRightOf="@id/home_recipe_box_3"
         app:layout_constraintStart_toEndOf="@+id/home_recipe_box_2"
         app:layout_constraintTop_toTopOf="@+id/home_recipe_box_2"
         app:layout_constraintVertical_bias="0.0" />
@@ -276,7 +274,6 @@
         android:layout_marginTop="30dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/ic_friedrice"
-        android:scrollHorizontally="true"
         app:layout_constraintBottom_toTopOf="@id/bottom_base"
         app:layout_constraintEnd_toEndOf="@id/home_recipe_box_1"
         app:layout_constraintStart_toStartOf="@id/home_recipe_box_1"
