--- a/mlkit/app/src/main/res/layout/fragment_profile.xml
+++ b/mlkit/app/src/main/res/layout/fragment_profile.xml
@@ -24,11 +24,11 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <ImageView
-        android:id="@+id/imageView6"
+        android:id="@+id/back_arrow"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:src="@drawable/ic_arrow_left_white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -41,7 +41,7 @@
         android:id="@+id/settings_button"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="26dp"
         android:layout_marginRight="17dp"
         android:background="@drawable/mdi_settings"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -249,7 +249,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
-    <!--bottom dock base-->
     <TextView
         android:id="@+id/eggFriedRice"
         android:layout_width="wrap_content"
@@ -266,6 +265,7 @@
         app:layout_constraintTop_toBottomOf="@+id/recipeImageButton"
         app:layout_constraintVertical_bias="0.0" />
 
+    <!--bottom dock base-->
     <ImageView
         android:id="@+id/bottom_base"
         android:layout_width="800dp"
