--- a/mlkit/app/src/main/res/layout/fragment_recipe.xml
+++ b/mlkit/app/src/main/res/layout/fragment_recipe.xml
@@ -26,7 +26,7 @@
         android:layout_marginStart="0dp"
         android:layout_marginTop="10dp"
         android:rotation="15"
-        android:src="@drawable/foodology_removebg_preview__1_" />
+        android:src="@drawable/logo_foodology" />
 
     <ImageView
         android:id="@+id/charPNG"
@@ -81,7 +81,7 @@
         android:layout_marginEnd="-15dp"
         android:layout_alignParentTop="true"
         android:layout_marginTop="650dp"
-        android:src="@drawable/ic_dock_base"/>
+        android:src="@drawable/dock_base"/>
 
     <!--dock scan-->
     <Button
@@ -89,7 +89,7 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginLeft="190dp"
-        android:background="@drawable/ic_scan_icon"
+        android:background="@drawable/dock_scan"
         android:layout_marginTop="685dp" />
 
     <!--dock home-->
@@ -98,7 +98,7 @@
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:layout_marginLeft="30dp"
-        android:background="@drawable/ic_dock_home"
+        android:background="@drawable/dock_home"
         android:layout_marginTop="685dp" />
 
     <!--dock profile-->
@@ -107,7 +107,7 @@
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:layout_marginLeft="110dp"
-        android:background="@drawable/ic_dock_profile"
+        android:background="@drawable/dock_profile"
         android:layout_marginTop="690dp" />
 
     <!--dock forum-->
@@ -116,7 +116,7 @@
         android:layout_width="28dp"
         android:layout_height="28dp"
         android:layout_marginLeft="280dp"
-        android:background="@drawable/ic_dock_forum"
+        android:background="@drawable/dock_forum"
         android:layout_marginTop="690dp" />
 
     <!--dock recipe-->
@@ -125,7 +125,7 @@
         android:layout_width="26dp"
         android:layout_height="26dp"
         android:layout_marginLeft="360dp"
-        android:background="@drawable/ic_dock_add_recipe"
+        android:background="@drawable/dock_add_recipe"
         android:layout_marginTop="692dp" />
 
     <FrameLayout
